Set up user authentication

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,9 +7,6 @@
 </head>
 <body>
   <h1><a href='/'>Sunscreen Savvy</a></h1>
-  <p>Hello and welcome!</p>
-
-  <div><a href='/login'>Log In</a></div>
-  <div><a href='/signup'>Sign Up</a></div>
+  <h2>Profile</h2>
 </body>
 </html>
