--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,5 +11,6 @@
 
   <div><a href='/login'>Log In</a></div>
   <div><a href='/signup'>Sign Up</a></div>
+  <div><a href='/logout'>Log Out</a></div>
 </body>
 </html>
