--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,7 +6,7 @@
   <title>Sunscreen Savvy</title>
 </head>
 <body>
-  <h1><a href='/'>Sunscreen Savvy</a></h1>
-  <h2>Profile</h2>
+  <h1><a href="/">Sunscreen Savvy</a></h1>
+  <h2><%= user.username %>'s Profile</h2>
 </body>
 </html>
