--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,7 +15,7 @@
     <% }) %>
   <% } %>
 
-  <form action='/signup' method='POST'>
+  <form action="/signup" method="POST">
     <div>
       <label for="username">Username</label>
       <input type="text" id="username" name="username" required>
@@ -35,6 +35,6 @@
     <button type="submit">Sign up</button>
   </form>
 
-  <div><a href='/login'>Already have an account? Log in here</a></div>
+  <div><a href="/login">Already have an account? Log in here</a></div>
 </body>
 </html>
