--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,14 @@
 <body>
   <h1><a href='/'>Sunscreen Savvy</a></h1>
   <h2>Log In</h2>
-  <form action='/login' method='POST'>
+
+  <% if (locals.messages.errors) { %>
+    <% messages.errors.forEach( error => { %>
+      <div><%= error.msg %></div>
+    <% }) %>
+  <% } %>
+
+  <form action="/login" method="POST">
     <div>
       <label for="email">Email address</label>
       <input type="email" id="email" name="email" required>
@@ -19,6 +26,6 @@
     </div>
     <button type="submit">Log in</button>
   </form>
-  <div><a href='/signup'>Sign up for an account</a></div>
+  <div><a href="/signup">Sign up for an account</a></div>
 </body>
 </html>
