Save new profile during user sign up

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,8 +9,14 @@
   <h1><a href="/">Sunscreen Savvy</a></h1>
   <h2><%= user.username %>'s Profile</h2>
   <section>
+    <h3>User Data</h3>
     <div>Skin Type: <%= user.skinType %> </div>
     <div>Skin Tone: <%= user.skinTone %> </div>
+  </section>
+  <section>
+    <h3>Profile Data</h3>
+      <div>Skin Type: <%= profile.skinType %> </div>
+      <div>Skin Tone: <%= profile.skinTone %> </div>
   </section>
   
   <h3>Update Profile</h3>
