--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -17,7 +17,11 @@
 
   <form action="/signup" method="POST">
     <div>
-      <label for="email">Email address</label>
+      <label for="username">First Name</label>
+      <input type="text" id="username" name="username" required>
+    </div>
+    <div>
+      <label for="email">Email Address</label>
       <input type="email" id="email" name="email" required>
     </div>
     <div>
@@ -25,21 +29,8 @@
       <input type="password" id="password" name="password" required>
     </div>
     <div>
-      <label for="confirmPassword">Confirm password</label>
+      <label for="confirmPassword">Confirm Password</label>
       <input type="password" id="confirmPassword" name="confirmPassword" required>
-    </div>
-    <h4>Profile</h4>
-    <div>
-      <label for="username">First name</label>
-      <input type="text" id="username" name="username" required>
-    </div>
-    <div>
-      <label for="skinType">Skin type</label>
-      <input type="text" id="skinType" name="skinType" required>
-    </div>
-    <div>
-      <label for="skinTone">Skin tone</label>
-      <input type="text" id="skinTone" name="skinTone" required>
     </div>
     <button type="submit">Sign up</button>
   </form>
