Display sunscreens on root page, fix add sunscreen form's boolean fields

--- a/views/add-sunscreen.ejs
+++ b/views/add-sunscreen.ejs
@@ -60,6 +60,10 @@
           <input type="radio" id="type_physical" name="type" value="physical">
           <label for="physical">Physical</label>
         </li>
+        <li>
+          <input type="radio" id="type_hybrid" name="type" value="hybrid">
+          <label for="hybrid">Hybrid</label>
+        </li>
       </ul>
     </fieldset>
     <fieldset>
