--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
     <% if (user) { %>
       <p>Hi <%= user.username %>!</p>
       <div><a href="/profile">Profile</a></div>
-      <div><a href="/add-sunscreen">Add a Sunscreen</a></div>
+      <div><a href="/addSunscreen">Add a Sunscreen</a></div>
       <div><a href="/logout">Log Out</a></div>
     <% } %>
   </section>
