--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sunscreen Savvy</title>
-</head>
-<body>
-  <h1><a href='/'>Sunscreen Savvy</a></h1>
+<%- include('partials/header') -%>
+
+<main class="container">
   <h2>Sign Up</h2>
 
   <% if (locals.messages.errors) { %>
@@ -17,24 +11,25 @@
 
   <form action="/signup" method="POST">
     <div>
-      <label for="username">First Name</label>
-      <input type="text" id="username" name="username" required>
+      <label for="username" class="form-label">First Name</label>
+      <input type="text" class="form-control" id="username" name="username" required>
     </div>
     <div>
-      <label for="email">Email Address</label>
-      <input type="email" id="email" name="email" required>
+      <label for="email" class="form-label">Email Address</label>
+      <input type="email" class="form-control" id="email" name="email" required>
     </div>
     <div>
-      <label for="password">Password</label>
-      <input type="password" id="password" name="password" required>
+      <label for="password" class="form-label">Password</label>
+      <input type="password" class="form-control" id="password" name="password" required>
     </div>
     <div>
-      <label for="confirmPassword">Confirm Password</label>
-      <input type="password" id="confirmPassword" name="confirmPassword" required>
+      <label for="confirmPassword" class="form-label">Confirm Password</label>
+      <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required>
     </div>
-    <button type="submit">Sign up</button>
+    <button type="submit" class="btn btn-primary my-3">Sign up</button>
   </form>
 
   <div><a href="/login">Already have an account? Log in here</a></div>
-</body>
-</html>
+</main>
+
+<%- include('partials/footer') -%>
