--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,10 +7,34 @@
  
 @layer base {
   html {
-    font-family: 'Mulish', system-ui, sans-serif;
+    font-family: "Mulish", system-ui, sans-serif;
+  }
+  body {
+    background-color: #fffefa;
+  }
+  h1 {
+    @apply text-4xl font-semibold
+  }
+  a {
+    @apply underline decoration-med-gray underline-offset-4 hover:font-semibold hover:decoration-lt-orange hover:decoration-2;
   }
 }
 
-body {
-  background-color: #fffefa;
+@layer components {
+  button {
+    @apply mx-auto px-4 py-2 rounded uppercase font-bold;
+  }
+  button.btn-primary {
+  @apply bg-lt-orange hover:bg-yellow;
+  }
+  button.btn-secondary {
+    @apply border border-med-gray bg-transparent hover:bg-lt-blue;
+  }
+  input[type="text"],input[type="password"],input[type="email"] {
+    @apply w-full border border-lt-gray mt-2 mb-6 py-2 px-3 rounded;
+  }
+
 }
+
+
+
