--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,9 @@
   h1 {
     @apply text-4xl font-semibold
   }
+  h2 {
+    @apply text-2xl font-semibold
+  }
   a {
     @apply underline decoration-med-gray underline-offset-4 hover:font-semibold hover:decoration-lt-orange hover:decoration-2;
   }
@@ -34,9 +37,20 @@
     @apply border border-med-gray bg-transparent hover:bg-lt-blue;
   }
   input[type="text"],input[type="password"],input[type="email"] {
-    @apply w-full border border-lt-gray mt-2 mb-6 py-2 px-3 rounded;
+    @apply w-full border border-lt-gray rounded mt-2 mb-6 py-2 px-3;
   }
   .error {
-    @apply italic text-sm text-dark-orange flex -mt-3 mb-6;
+    @apply flex -mt-3 mb-6
+           italic text-sm text-dark-orange;
+  }
+  button.btn-dropdown {
+    @apply w-60 border border-med-gray bg-white hover:bg-lt-blue shadow; 
+  }
+  .dropdown {
+    @apply absolute flex flex-col w-60 mt-2 
+           border border-med-gray rounded bg-white;
+  }
+  .dropdown-link {
+    @apply p-4 hover:bg-lt-blue no-underline ;
   }
 }
