--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,10 +34,10 @@
     @apply mx-auto px-4 py-2 rounded uppercase font-bold;
   }
   button.btn-primary {
-    @apply bg-lt-orange hover:bg-yellow;
+    @apply border border-yellow bg-yellow hover:bg-lt-blue hover:border-lt-blue;
   }
   button.btn-secondary {
-    @apply border border-med-gray bg-transparent hover:bg-lt-blue;
+    @apply border border-med-gray bg-off-white hover:bg-lt-blue;
   }
   input[type="text"],input[type="password"],input[type="email"] {
     @apply w-full border border-lt-gray rounded mt-2 mb-6 py-2 px-3;
