Style removeFilter buttons

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -39,16 +39,19 @@
   button.btn-secondary {
     @apply border border-med-gray bg-off-white hover:bg-lt-blue;
   }
+  button.btn-dropdown {
+    @apply  w-28 border border-med-gray bg-white
+            text-left; 
+  }
+  button.btn-remove-filter {
+    @apply  border border-med-gray bg-lt-blue hover:bg-off-white rounded-full font-semibold text-sm
+  }
   input[type="text"],input[type="password"],input[type="email"] {
     @apply w-full border border-lt-gray rounded mt-2 mb-6 py-2 px-3;
   }
   .error {
     @apply flex -mt-3 mb-6
            italic text-sm text-dark-orange;
-  }
-  button.btn-dropdown {
-    @apply  w-28 border border-med-gray bg-white
-            text-left; 
   }
   .dropdown {
     @apply absolute flex flex-col w-28
