Change html title

--- a/backend/views/addSunscreen.ejs
+++ b/backend/views/addSunscreen.ejs
@@ -69,6 +69,10 @@
       <input type="text" id="pricePerOz" name="pricePerOz" >
     </div>
     <div class="mb-3">
+      <label for="url">Site Link:</label>
+      <input type="text" id="url" name="url" >
+    </div>
+    <div class="mb-3">
       <label for="ingredients">Ingredients:</label>
       <input type="text" id="ingredients" name="ingredients" >
     </div>
