--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,10 +34,10 @@
 
 @layer components {
   button.btn-primary {
-    @apply border border-yellow bg-yellow hover:bg-lt-blue hover:border-lt-blue;
+    @apply border border-yellow bg-yellow hover:bg-white hover:border-med-gray;
   }
   button.btn-secondary {
-    @apply border border-med-gray bg-off-white hover:bg-lt-blue;
+    @apply border border-lt-blue bg-lt-blue hover:bg-white hover:border-med-gray;
   }
   button.btn-dropdown {
     @apply  w-28 border border-med-gray bg-white
